# sample-Agentic-Ai-Data-Operations

./: .gitallowed  .gitignore  .mcp.gateway.json  .mcp.json  .mcp.json.example  .pre-commit-config.yaml  .secrets.baseline  CLAUDE.md  CLEANUP_SUMMARY.md  DEMO_GUIDE.md  DEPLOYMENT_SUMMARY.md  GITHUB_RELEASE_LOG.txt  GITHUB_SUCCESS.md  MCP_GUARDRAILS.md  MCP_PII_USAGE_EXAMPLES.md  MCP_SETUP.md  PII_DETECTION_QUICK_REF.md  PII_DETECTION_TEST_REPORT.md  PII_DETECTION_TEST_RESULTS.md  POST_PUBLISH_CHECKLIST.md  PROMPT_ISSUES_AND_IMPROVEMENTS.md  PROMPT_WORKFLOW_GUIDE.md  README.md  REPOSITORY_STATUS.md  RUNNING_TESTS.md  SECURITY.md  SKILLS.md  TOOLS.md  TOOL_ROUTING.md  WORKFLOW.md  WORKFLOW_QUICK_REFERENCE.md  WORKFLOW_VISUAL_DIAGRAM.md  conftest.py  dashboard_preview.html  grant_demo_role_access.py  pre-commit-check.sh  push-to-github.sh  pyproject.toml  run_pipeline.py  test_pii_detection.py  (+2 more)
.github/: dependabot.yml
dags/: mcp_orchestrator_dag.py
demo/: README.md  prompt-high.md  prompt.md
docs/: README.md  architecture.excalidraw  aws-account-setup.md  demo-mcp-orchestration.py  export.sh  flow.excalidraw  getting-started.md  governance-framework.md  governance-integration-example.md  guardrails.md  mcp-architecture.md  mcp-integration.md  mcp-servers.md  mcp-setup.md  multi-account-deployment.md  prompt-architecture.md  prompt-flow-overview.md  prompt-workflow.md  running-tests.md  security.md  semntic-layer.excalidraw  workflow-diagrams.md
prompts/: 00-setup-environment.md  01-route-check-existing.md  02-generate-synthetic-data.md  03-onboard-build-pipeline.md  (+4 more)
(+490 files in other folders)
